[package]
name = "pc-stat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.21.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
